--- a/newsAPI/index.html
+++ b/newsAPI/index.html
@@ -14,7 +14,7 @@
             <div class="form-group">
                 
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <!--<button type="submit" class="btn btn-primary">Submit</button>-->
         </form>
     </div>
     
