--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta content="news api with drop-down list of news sources" name="description">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
-    <title>NewsAPI V4</title>
+    <title>NewsAPI</title>
     
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     
@@ -27,7 +27,7 @@
 </header>
 
 <main>
-    <h1 id="top">The News That You Choose</h1>    
+    <h1 id="top">Get The News That You Choose</h1>    
     <div class="container">
         <form id="source">
             <div class="form-group">
