--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <!-- FOOTER -->
 <footer>
-	<p id="footer">&copy; 2017 Edward Dupre &middot; <a href="https://code-42.github.io/my_portfolio">Back to My Portfolio</a> &middot; <a href="https://github.com/code-42/newsapi">My Github Repo</a></p>
+	<p id="footer">&copy; 2017 Edward Dupre &middot; <a href="http://www.edwarddupre.com.s3-website.us-east-2.amazonaws.com/">Back to My Portfolio</a> &middot; <a href="https://github.com/code-42/newsapi">My Github Repo</a></p>
 </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
